hphp/test/zend/good/Zend/tests/debug_info-error-false.php.expectf

Fatal error: __debugInfo() must return an array in %s/debug_info-error-false.php on line 14
